<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sampleToolBar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topNavigationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:visibility="invisible"
                android:id="@+id/exitFormImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/go_back"
                android:padding="@dimen/toolbar_buttons_padding"
                android:src="@drawable/ic_clear"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:text="@string/toolbar_stepper5"
                android:id="@+id/pageTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorWhite"
                android:src="@drawable/ic_info_check"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/exitFormImageView"
                app:layout_constraintEnd_toStartOf="@+id/completeButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:visibility="invisible"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:text="Submit"
                android:onClick="complete"
                android:id="@+id/addmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_info_check"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/finish"
                android:padding="@dimen/toolbar_buttons_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:paddingTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ListView
       android:padding="10dp"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp">
    </ListView>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="No record's found" />
    </RelativeLayout>
</RelativeLayout>