<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4CAC5">

    <LinearLayout
        android:background="#F4CAC5"
        android:paddingTop="100dp"
        android:id="@+id/root_view_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <ImageView
            android:contentDescription="@string/todo"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/logo1"/>
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.18"
            android:text="@string/login_text"
            android:textColor="#333333"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:background="#F4CAC5"
        android:clickable="true"
        android:id="@+id/formRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/root_view_login_activity"
        android:focusable="true" />
    <ListView
        tools:listitem="@layout/activity_view_record"
        app:layout_constraintTop_toBottomOf="@+id/formRecyclerView"
        android:padding="10dp"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"/>


    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sut_sam_aj"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:visibility="invisible"
        android:background="?selectableItemBackgroundBorderless"
        android:id="@+id/exitAppImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_personn"
        tools:ignore="MissingConstraints,VectorDrawableCompat"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

