<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:padding="20dp"
    android:id="@+id/bottom_sheet"
    android:background="#F4CAC5">

    <TextView
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add family member"
        android:textColor="@android:color/black"
        android:textSize="21dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>
    <ImageButton
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_black"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/finish"
        android:padding="@dimen/toolbar_buttons_padding"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <Spinner
        android:paddingStart="1dp"
        tools:targetApi="lollipop"
        android:id="@+id/spinner0"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="0dp"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingEnd="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:id="@+id/nameMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/M_name"/>
    <EditText
        android:maxLength="3"
        android:id="@+id/ageMember"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Relation"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <Spinner
        android:paddingStart="1dp"
        tools:targetApi="lollipop"
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="0dp"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingEnd="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/G_qualification"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <Spinner
        android:paddingStart="1dp"
        tools:targetApi="lollipop"
        android:id="@+id/spinner1"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="0dp"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingEnd="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Employment"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <Spinner
        android:paddingStart="1dp"
        tools:targetApi="lollipop"
        android:id="@+id/spinner3"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="0dp"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingEnd="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:visibility="gone"
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:id="@+id/jobDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_description"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Caste In Certificate"
        android:textStyle="bold"
        android:textSize="12dp"/>
    <Spinner
        android:paddingStart="1dp"
        tools:targetApi="lollipop"
        android:id="@+id/spinner2"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="0dp"
        android:background="@drawable/spinner_bg"
        android:dropDownWidth="300dp"
        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
        android:paddingEnd="14dp"
        android:popupBackground="@android:color/white"
        android:popupElevation="3dp"
        android:stateListAnimator="@drawable/spinner_sla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:visibility="invisible"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/finish"
            android:padding="@dimen/toolbar_buttons_padding"
            />
        <Button
            android:textAllCaps="false"
            android:text="Submit"
            android:layout_centerHorizontal="true"
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/finish"
            android:padding="@dimen/toolbar_buttons_padding"
            />
        <Button
            android:visibility="invisible"
            android:textAllCaps="false"
            android:text="Add"
            android:layout_alignParentEnd="true"
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_check_black"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/finish"
            android:padding="@dimen/toolbar_buttons_padding"
            />

    </RelativeLayout>
    <Button
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_alignParentBottom="true"
        android:text="Add"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_login_button"
        android:layout_marginBottom="20dp"/>
</LinearLayout>