<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:background="#F4CAC5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sampleToolBar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topNavigationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:visibility="gone"
                android:id="@+id/exitFormImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/go_back"
                android:padding="@dimen/toolbar_buttons_padding"
                android:src="@drawable/ic_clear"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:text="@string/toolbar_stepper2"
                android:id="@+id/pageTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorWhite"
                android:src="@drawable/ic_info_check"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/exitFormImageView"
                app:layout_constraintEnd_toStartOf="@+id/completeButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/completeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_info_check"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/finish"
                android:padding="@dimen/toolbar_buttons_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/mainLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters|textMultiLine"
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="6"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin"/>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:paddingStart="11.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="State"/>

            <Spinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:layout_margin="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/spinner_bg"
                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry"
                tools:targetApi="lollipop" />

            <TextView
                android:paddingStart="11.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="District"/>
            <Spinner
                android:paddingStart="1dp"
                tools:targetApi="lollipop"
                android:id="@+id/spinner1"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:layout_margin="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_bg"
                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:paddingEnd="14dp"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:paddingStart="11.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tehesil"/>
            <Spinner
                android:paddingStart="1dp"
                tools:targetApi="lollipop"
                android:id="@+id/spinner2"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:layout_margin="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_bg"
                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:paddingEnd="14dp"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:paddingStart="11.5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/village"/>
            <Spinner
                android:visibility="visible"
                android:paddingStart="1dp"
                tools:targetApi="lollipop"
                android:id="@+id/spinner3"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:layout_margin="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/spinner_bg"
                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:paddingEnd="14dp"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:text="Recheck"
                    android:layout_gravity="center"
                    android:id="@+id/preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_info_check_black"
                    android:background="?selectableItemBackground"
                    android:contentDescription="@string/finish"
                    android:padding="@dimen/toolbar_buttons_padding"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:layout_alignParentEnd="true"
                    android:textAllCaps="false"
                    android:text="Next"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/nextAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_next"
                    android:background="?selectableItemBackground"
                    android:contentDescription="@string/finish"
                    android:padding="@dimen/toolbar_buttons_padding"
                    />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
